# x-tool

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TERMUX_GUIDE.md  install.sh  pyproject.toml  requirements.txt
docs/: FIREFOX_COOKIE_EDITOR.md  SAFETY.md  TROUBLESHOOTING.md
examples/: likes.sample.js  tweets.sample.js
tests/: test_actions.py  test_discovery.py  test_likes.py  test_privacy_polish.py  test_release_polish.py  test_resolver.py  test_security_audit.py  test_smoke.py  test_wizard.py
xtool/: __init__.py  _redact.py  _safe_io.py  actions.py  auth.py  cli.py  deleter.py  discovery.py  doctor.py  filters.py  identity_store.py  logs.py  parser.py  resolver.py  safety.py  ui.py  updater.py  wizard.py
