[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "xtool"
version = "0.1.0"
description = "Bulk-delete tweets from an X (Twitter) archive on Termux/Linux."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "x-tool contributors" }]
keywords = ["twitter", "x", "delete", "archive", "termux", "cli"]
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.31",
    "python-dateutil>=2.8",
    "rich>=13.0",
]

[project.scripts]
xtool = "xtool.cli:main"

[project.urls]
Homepage = "https://github.com/melynkhael/x-tool"
Issues = "https://github.com/melynkhael/x-tool/issues"

[tool.setuptools.packages.find]
include = ["xtool*"]
